Fix spacing on index.html
For some reason, whitespace was getting injected and screwing things up
between the date and the title.

--- a/themes/pdp80-theme/assets/css/pdp.css
+++ b/themes/pdp80-theme/assets/css/pdp.css
@@ -123,21 +123,6 @@ h2, h3 {
   font-weight: bold;
 }
 
-@media screen and (max-width: 768px) {
-  .archive .post-time {
-    margin: 2px 0;
-    width: auto;
-    font-size: 15px;
-    display: inline-block;
-  }
-
-  .archive .post-item {
-    padding: 3px 0px;
-    overflow-x: hidden;
-    font-size: 15px;
-  }
-}
-
 nav.main-nav {
   padding: 20px 20px 0;
   margin: 0 auto;
